tests/ui/dlist.stderr
error: I see you're using a LinkedList! Perhaps you meant some other data structure?
  --> $DIR/dlist.rs:13:16
   |
13 |     type Baz = LinkedList<u8>;
   |                ^^^^^^^^^^^^^^
   |
   = note: #[deny(linkedlist)] implied by #[deny(clippy)]
note: lint level defined here
  --> $DIR/dlist.rs:6:9
   |
6  | #![deny(clippy)]
   |         ^^^^^^
   = help: a VecDeque might work

error: I see you're using a LinkedList! Perhaps you meant some other data structure?
  --> $DIR/dlist.rs:14:12
   |
14 |     fn foo(LinkedList<u8>);
   |            ^^^^^^^^^^^^^^
   |
   = note: #[deny(linkedlist)] implied by #[deny(clippy)]
   = help: a VecDeque might work

error: I see you're using a LinkedList! Perhaps you meant some other data structure?
  --> $DIR/dlist.rs:15:24
   |
15 |     const BAR : Option<LinkedList<u8>>;
   |                        ^^^^^^^^^^^^^^
   |
   = note: #[deny(linkedlist)] implied by #[deny(clippy)]
   = help: a VecDeque might work

error: I see you're using a LinkedList! Perhaps you meant some other data structure?
  --> $DIR/dlist.rs:26:15
   |
26 |     fn foo(_: LinkedList<u8>) {}
   |               ^^^^^^^^^^^^^^
   |
   = note: #[deny(linkedlist)] implied by #[deny(clippy)]
   = help: a VecDeque might work

error: I see you're using a LinkedList! Perhaps you meant some other data structure?
  --> $DIR/dlist.rs:29:39
   |
29 | pub fn test(my_favourite_linked_list: LinkedList<u8>) {
   |                                       ^^^^^^^^^^^^^^
   |
   = note: #[deny(linkedlist)] implied by #[deny(clippy)]
   = help: a VecDeque might work

error: I see you're using a LinkedList! Perhaps you meant some other data structure?
  --> $DIR/dlist.rs:33:29
   |
33 | pub fn test_ret() -> Option<LinkedList<u8>> {
   |                             ^^^^^^^^^^^^^^
   |
   = note: #[deny(linkedlist)] implied by #[deny(clippy)]
   = help: a VecDeque might work

error: aborting due to 6 previous errors

